--- a/PostEffectTest/PostEffectTest/PostEffectTest.csproj
+++ b/PostEffectTest/PostEffectTest/PostEffectTest.csproj
@@ -47,8 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Effects\BaseEffect.cs" />
+    <Compile Include="Effects\BevelEffect.cs" />
     <Compile Include="Effects\DropShadowEffect.cs" />
-    <Compile Include="Effects\InnerGlowEffect.cs" />
+    <Compile Include="Effects\GlowEffect.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
