--- a/PostEffectTest/PostEffectTest/PostEffectTest.csproj
+++ b/PostEffectTest/PostEffectTest/PostEffectTest.csproj
@@ -49,7 +49,10 @@
     <Compile Include="Effects\BaseEffect.cs" />
     <Compile Include="Effects\BevelEffect.cs" />
     <Compile Include="Effects\DropShadowEffect.cs" />
+    <Compile Include="Effects\EmbossEffect.cs" />
+    <Compile Include="Effects\FillEffect.cs" />
     <Compile Include="Effects\GlowEffect.cs" />
+    <Compile Include="Effects\StrokeEffect.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +64,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\GraphicsHelper.cs" />
+    <Compile Include="Utils\PointFHelper.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
