--- a/PostEffectTest/PostEffectTest/PostEffectTest.csproj
+++ b/PostEffectTest/PostEffectTest/PostEffectTest.csproj
@@ -106,5 +106,8 @@
   <ItemGroup>
     <None Include="Resources\icons8-close-window-50.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-multiply-24.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
