--- a/GridTableBuilder/GridTableBuilder.csproj
+++ b/GridTableBuilder/GridTableBuilder.csproj
@@ -46,24 +46,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\DrawGridPanel.cs">
+    <Compile Include="GridModel\GUI\DrawGridPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Controls\MouseController.cs" />
-    <Compile Include="Grid_Model\Edge.cs" />
-    <Compile Include="Grid_Model\Grid.cs" />
-    <Compile Include="Grid_Model\GridDraw.cs" />
-    <Compile Include="Grid_Model\GridErase.cs" />
-    <Compile Include="Grid_Model\GridMove.cs" />
-    <Compile Include="Grid_Model\Helper.cs" />
-    <Compile Include="Grid_Model\Line.cs" />
+    <Compile Include="GridModel\GUI\MouseController.cs" />
+    <Compile Include="GridModel\Edge.cs" />
+    <Compile Include="GridModel\Grid.cs" />
+    <Compile Include="GridModel\GUI\TrackLineDragger.cs" />
+    <Compile Include="GridModel\Interfaces\IDraggable.cs" />
+    <Compile Include="GridModel\Interfaces\IDragger.cs" />
+    <Compile Include="GridModel\Interfaces\IDrawable.cs" />
+    <Compile Include="GridModel\Interfaces\ISelectable.cs" />
+    <Compile Include="GridModel\Node.cs" />
+    <Compile Include="GridModel\TrackLine.cs" />
+    <Compile Include="GridModel_old\Edge.cs" />
+    <Compile Include="GridModel_old\Grid.cs" />
+    <Compile Include="GridModel_old\GridDraw.cs" />
+    <Compile Include="GridModel_old\GridErase.cs" />
+    <Compile Include="GridModel_old\GridMove.cs" />
+    <Compile Include="GridModel_old\Helper.cs" />
+    <Compile Include="GridModel_old\Line.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Grid_Model\PointNode.cs" />
+    <Compile Include="GridModel_old\PointNode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainForm.resx">
@@ -91,5 +100,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
