--- a/GridTableBuilder/GridTableBuilder.csproj
+++ b/GridTableBuilder/GridTableBuilder.csproj
@@ -64,6 +64,8 @@
     <Compile Include="GridModel\GUI\SizeMarkerDragger.cs" />
     <Compile Include="GridModel\GUI\TrackLineDragger.cs" />
     <Compile Include="GridModel\Helpers\PointFHelper.cs" />
+    <Compile Include="GridModel\Helpers\SaverLoader.cs" />
+    <Compile Include="GridModel\Helpers\VersionInfo.cs" />
     <Compile Include="GridModel\Interfaces\IDraggable.cs" />
     <Compile Include="GridModel\Interfaces\IDragger.cs" />
     <Compile Include="GridModel\Interfaces\IDrawable.cs" />
