The translucent image added

--- a/GridTableBuilder/GridTableBuilder.csproj
+++ b/GridTableBuilder/GridTableBuilder.csproj
@@ -56,6 +56,7 @@
     <Compile Include="GridModel\EdgeBuilders\CircleEdgeBuilder.cs" />
     <Compile Include="GridModel\EdgeBuilders\LineEdgeBuilder.cs" />
     <Compile Include="GridModel\EdgeBuilders\CurveEdgeBuilder.cs" />
+    <Compile Include="GridModel\GUI\TranslucentDrawer.cs" />
     <Compile Include="GridModel\Helpers\FloatHelper.cs" />
     <Compile Include="GridModel\GUI\DrawGridPanel.cs">
       <SubType>UserControl</SubType>
